# MovieOrganizer

./: .gitignore  CONTRIBUTING.md  README.md  config.ini  organize_media_files.py  pyproject.toml
movieorganizer/: config.ini  organize.py
movieorganizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_media_organizer.py
