[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movieorganizer"
version = "0.1.0"
description = "Organise les fichiers de films et séries téléchargés dans des dossiers appropriés"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Fadiga"}
]
keywords = ["movies", "organizer", "media", "series"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "pytest>=8.3.0",
]

[project.scripts]
movieorganizer = "movieorganizer:main"

[tool.setuptools.packages.find]
include = ["movieorganizer*"]

[tool.setuptools.package-data]
movieorganizer = ["config.ini"]
